--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -28,14 +28,14 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:background="?attr/selectableItemBackground"
-				android:orientation="vertical">
+				android:orientation="vertical"
+				android:padding="@dimen/big_item_padding">
 
 				<TextView
 					android:id="@+id/user_item_title"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:gravity="center"
-					android:padding="@dimen/item_padding"
 					android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
 					tools:text="Jirka"
 					/>
