--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
 	<dimen name="row_height">68dp</dimen>
 	<dimen name="corner_radius">4dp</dimen>
 	<dimen name="item_padding">8dp</dimen>
+	<dimen name="big_item_padding">24dp</dimen>
 </resources>
