--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -28,14 +28,22 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:background="?attr/selectableItemBackground"
-				android:orientation="vertical"
+				android:orientation="horizontal"
 				android:padding="@dimen/big_item_padding">
+
+				<ImageView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:src="@drawable/ic_account_box_black"/>
 
 				<TextView
 					android:id="@+id/user_item_title"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
+					android:layout_gravity="center"
+					android:ellipsize="end"
 					android:gravity="center"
+					android:lines="1"
 					android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
 					tools:text="Jirka"
 					/>
